--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
         <item>7</item>
         <item>8</item>
     </string-array>
+    <string name="title_activity_filter_results">FilterResultsActivity</string>
 </resources>
